[package]
name = "batty"
version = "0.4.2"
authors = ["Nico Estrada <ne13@illinois.edu>", "Gabriel Vincent"]
edition = "2021"
description = "Battery Health Tool for Linux"
license = "MIT"
repository = "https://github.com/nicoestrada/batty"
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
ratatui = "0.26"
crossterm = "0.27"
